<resources>
    <string name="app_name">Weather Report</string>
    <string name="freshchat_file_provider_authority">com.shareous.android.provider</string>

    <string name="hide_text">HIDE</string>
    <string name="show_text">SHOW</string>

    <string name="no_record_found">No record found</string>
    <string name="info">Info</string>
    <string name="disabled_gps_alert">Disable GPS Alert message</string>
    <string name="unknown_error_occurred">Unable to get proper response from server. Please, Try Again.</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="unknown_server">Unknown Server</string>
    <string name="failed_to_connect">Failed to connect server</string>
    <string name="weather_report">Weather Report</string>
    <string name="loading">Loading...</string>
    <string name="uk">UK</string>
    <string name="england">England</string>
    <string name="wales">Wales</string>
    <string name="scotland">Scotland</string>
    <string name="rainfall">Rainfall</string>
    <string name="max_temperature">Max Temperature</string>
    <string name="min_temperature">Min Temperature</string>
    <string name="sorry_no_data_fond">Sorry!! No Data fond</string>


    <string-array name="month_array">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
</resources>
